--- a/src/App.css
+++ b/src/App.css
@@ -1,63 +1,95 @@
 .App {
   text-align: center;
-  font-size:1.8rem;
-  width:100vw;
-  height:100vh;
-  display:flex;
+  font-size: 2rem;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
   justify-content: center;
   align-items: center;
-  color:white;
 }
-.container{
-  width: 100vw;
-  max-width: 900px;
+
+h1 {
+  background: linear-gradient(170deg, black 45%, grey 45%);
+  background-clip: text;
+  color: transparent;
 }
-.top{  
+.top {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin:20px;
+  margin: auto;
 }
-.top-left, .top-right{
-
-  width:350px;
+.top-left,
+.top-right {
+  width: 350px;
 }
-.bottom{
-  width:300px;
-  border:5px solid white;
-  margin:40px auto;
-  border-radius:20px;
- 
-}
-.break-title, .session-title{
-  padding-top:50px;
-}
-
-.plus, .minus{
-  display: inline-block;
-  padding:10px 20px;
-}
-.title{
-  
-  padding:20px;
+.bottom {
+  position: relative;
+  width: 250px;
+  height: 250px;
+  margin: 120px auto 100px;
+  border-radius: 50%;
+  background-color: grey;
+  box-shadow: 0px 5px 5px 1px;
 }
 
-.start-pause, .refresh{
-  display: inline-block;
-  padding:30px;
+.btn-box {
+  margin: 20px 0 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.plus,
+.minus {
+  display: block;
+  width: 50px;
+  height: 50px;
+  background-color: black;
+  padding: 10px;
+  border-radius: 50%;
+  color: white;
+}
+.length {
+  display: block;
+  background-color: grey;
+  width: 60px;
+  border-radius: 5px;
+  font-weight: bold;
+  padding: 7px 10px;
+}
+.title {
+  padding: 40px;
 }
 
-i{
+.start-pause,
+.refresh {
+  position: absolute;
+  font-size: 1.4rem;
+  padding: 30px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: black;
+  color: white;
+  transition: 0.5s;
+}
+.refresh {
+  padding: 40px;
+  top: -75px;
+  left: 160px;
+}
+.start-pause {
+  top: -75px;
+  left: -10px;
+}
+.start-pause:hover,
+.refresh:hover {
   cursor: pointer;
-  
-}
-i:hover{
-  transform:scale(1.2);
+  transform: scale(1.2);
 }
 
-@media screen and (max-width:600px){
-  .App{
-    font-size:1.3rem;
-  }
-  
+.plus:hover,
+.minus:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
